Add item state hotkeys

--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -8,6 +8,9 @@
     >
     <UserControl.KeyBindings>
         <KeyBinding Command="{Binding RunItemCommand, Mode=OneWay}" Gesture="Enter"/>
+        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{x:Static enums:WatchState.Planned}" Gesture="q"/>
+        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{x:Static enums:WatchState.Watched}" Gesture="w"/>
+        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{x:Static enums:WatchState.Notset}" Gesture="e"/>
     </UserControl.KeyBindings>
     <Grid Background="#242e44">
         <ListBox Grid.Row="0" Name="ItemList" BorderThickness="0"
