--- a/src/v00v.Views/Catalog/CatalogControl.xaml
+++ b/src/v00v.Views/Catalog/CatalogControl.xaml
@@ -4,9 +4,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:catalog="clr-namespace:v00v.Views.Catalog"
     >
-    
+    <UserControl.KeyBindings>
+        <KeyBinding Command="{Binding SelectChannelCommand, Mode=OneWay}" Gesture="Home"/>
+    </UserControl.KeyBindings>
     <Grid Width="230" ColumnDefinitions="*,auto" RowDefinitions="46,*,auto" Background="#242e44">
-        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan ="2" Text="{Binding SearchText, Mode=TwoWay}" />
+
+        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan ="2" Margin="10,9,8,9"
+                 Text="{Binding SearchText, Mode=TwoWay}" 
+                 />
 
         <ListBox Grid.Row="1" Grid.ColumnSpan="2" BorderThickness="0"
             Items="{Binding Entries}"
@@ -85,7 +90,7 @@
                             <Image Source="resm:v00v.MainApp.Icons.Light.Plus32.png?assembly=v00v.MainApp" />
                         </Panel>
                     </Button>
-                    <ComboBox Height="25" Width="90" ToolTip.Tip="Tag" 
+                    <ComboBox Height="25" Width="90" ToolTip.Tip="Tag"
                               VerticalAlignment="Bottom" 
                               VirtualizationMode="Simple" 
                               Items="{Binding Tags}" 
@@ -177,8 +182,6 @@
         </Style>
 
         <Style Selector="TextBox">
-            <Setter Property="Height" Value="28" />
-            <Setter Property="Margin" Value="10,2,8,0" />
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="Foreground" Value="#ffffff" />
             <Setter Property="Background" Value="#1b2333" />
