--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -20,7 +20,9 @@
         </Expander.Header>
         <Grid Width="220" ColumnDefinitions="*,auto" RowDefinitions="46,*" Background="#242e44">
 
-            <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding SearchText, Mode=TwoWay}" />
+            <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,9,8,9"
+                     Text="{Binding SearchText, Mode=TwoWay}" 
+                     />
 
             <ListBox Grid.Row="1" Grid.ColumnSpan="2"
                      Items="{Binding Entries}"
@@ -110,8 +112,6 @@
     <UserControl.Styles>
         
         <Style Selector="TextBox">
-            <Setter Property="Height" Value="28" />
-            <Setter Property="Margin" Value="10,2,8,0" />
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="Foreground" Value="#ffffff" />
             <Setter Property="Background" Value="#1b2333" />
