--- a/src/v00v.Views/Catalog/CatalogControl.xaml
+++ b/src/v00v.Views/Catalog/CatalogControl.xaml
@@ -30,6 +30,13 @@
 
             <ListBox.ContextMenu>
                 <ContextMenu>
+                    <MenuItem Header="Save" Command="{Binding SaveChannelCommand, Mode=OneWay}" 
+                              IsVisible="{Binding SelectedEntry.IsNew, Mode=OneWay}"
+                              >
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Save32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
                     <MenuItem Header="Edit" Command="{Binding EditChannelCommand, Mode=OneWay}" 
                               IsVisible="{Binding !SelectedEntry.IsStateChannel, Mode=OneWay}"
                               >
