--- a/src/v00v.Views/Catalog/EntryControl.xaml
+++ b/src/v00v.Views/Catalog/EntryControl.xaml
@@ -17,15 +17,15 @@
         </Panel>
 
         <Panel Classes="Title" Grid.Column="1" Height="24" VerticalAlignment="Center">
-            <TextBlock Text="{Binding Title, Mode=OneWay}"
-                       TextWrapping="NoWrap" 
-                       VerticalAlignment="Center" 
-                       FontSize="15" />
+            <TextBlock Text="{Binding Title, Mode=OneWay}" 
+                       FontStyle="{Binding FontStyle, Mode=OneWay}" 
+                       TextWrapping="NoWrap" VerticalAlignment="Center" FontSize="15" 
+                       />
         </Panel>
 
         <Panel Classes="Indicator" Grid.Column="2" Height="24" VerticalAlignment="Center">
-            <Border IsVisible="{Binding HasNew, Mode=TwoWay}">
-                <TextBlock Text="{Binding Count}" VerticalAlignment="Center" />
+            <Border IsVisible="{Binding HasNew, Mode=OneWay}">
+                <TextBlock Text="{Binding Count, Mode=OneWay}" VerticalAlignment="Center" />
             </Border>
         </Panel>
     </Grid>
