--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -63,7 +63,7 @@
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Go to Channel" Command="{Binding GoToParentCommand, Mode=OneWay}" 
+                    <MenuItem Header="{Binding GotoMenu, Mode=OneWay}" Command="{Binding GoToParentCommand, Mode=OneWay}" 
                               IsVisible="{Binding IsParentState, Mode=OneWay}"
                               >
                         <MenuItem.Icon>
