--- a/src/v00v.Views/Catalog/CatalogControl.xaml
+++ b/src/v00v.Views/Catalog/CatalogControl.xaml
@@ -38,6 +38,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Edit" Command="{Binding EditChannelCommand, Mode=OneWay}" 
+                              IsEnabled="{Binding !IsWorking, Mode=OneWay}" 
                               IsVisible="{Binding !SelectedEntry.IsStateChannel, Mode=OneWay}"
                               >
                         <MenuItem.Icon>
@@ -45,6 +46,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Sync" Command="{Binding SyncChannelCommand, Mode=OneWay}" 
+                              IsEnabled="{Binding !IsWorking, Mode=OneWay}" 
                               IsVisible="{Binding !SelectedEntry.IsStateChannel, Mode=OneWay}"
                               >
                         <MenuItem.Icon>
@@ -64,16 +66,24 @@
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
+                    <MenuItem Header="Related" Command="{Binding GetRelatedChannelCommand, Mode=OneWay}" 
+                              IsEnabled="{Binding !IsWorking, Mode=OneWay}" 
+                              IsVisible="{Binding !SelectedEntry.IsStateChannel, Mode=OneWay}"
+                              >
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Book32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
                     <MenuItem Header="Backup" Command="{Binding BackupCommand, Mode=OneWay}" 
                               IsVisible="{Binding SelectedEntry.IsStateChannel, Mode=OneWay}"
-                    >
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Backup32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Restore" Command="{Binding RestoreCommand, Mode=OneWay}" 
                               IsVisible="{Binding SelectedEntry.IsStateChannel, Mode=OneWay}"
-                    >
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Restore32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
