--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -3,21 +3,22 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:explorer="clr-namespace:v00v.Views.Explorer"
-    xmlns:converters="clr-namespace:v00v.Model.Converters;assembly=v00v.Model"
     xmlns:enums="clr-namespace:v00v.Model.Enums;assembly=v00v.Model"
     >
+
     <UserControl.KeyBindings>
         <KeyBinding Command="{Binding RunItemCommand, Mode=OneWay}" Gesture="Enter"/>
         <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{x:Static enums:WatchState.Planned}" Gesture="q"/>
         <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{x:Static enums:WatchState.Watched}" Gesture="w"/>
         <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{x:Static enums:WatchState.Notset}" Gesture="e"/>
     </UserControl.KeyBindings>
-    <Grid Background="#242e44">
+
+    <Grid Background="#242e44" Margin="-0.7,-0.7,0,0">
         <ListBox Grid.Row="0" Name="ItemList" BorderThickness="0"
                  Items="{Binding Items}"
                  SelectedItem="{Binding SelectedEntry, Mode=TwoWay}"
                  VirtualizationMode="Simple"
-                 ScrollViewer.VerticalScrollBarVisibility="Visible"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  >
             <ListBox.DataTemplates>
@@ -72,7 +73,7 @@
                     </MenuItem>
                     <MenuItem Header="Go to Playlist" Command="{Binding GoToParentCommand, Mode=OneWay}" 
                               IsVisible="{Binding !IsParentState, Mode=OneWay}"
-                    >
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.RightArrow32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
@@ -167,6 +168,38 @@
 
         <Style Selector="ListBoxItem Grid">
             <Setter Property="Height" Value="51"/>
+        </Style>
+
+        <Style Selector="ScrollBar /template/ Thumb#thumb">
+            <Setter Property="Background" Value="#888888"/>
+        </Style>
+        <Style Selector="ScrollBar:horizontal /template/ Thumb#thumb">
+            <Setter Property="MinWidth" Value="10" />
+            <Setter Property="Height" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar:vertical">
+            <Setter Property="Width" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar:vertical /template/ Thumb#thumb">
+            <Setter Property="MinHeight" Value="10" />
+            <Setter Property="Width" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton.repeat">
+            <Setter Property="Padding" Value="1" />
+            <Setter Property="Background" Value="#AAAAAA" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton.repeattrack">
+            <Setter Property="Template">
+                <ControlTemplate>
+                    <Border Background="#AAAAAA" />
+                </ControlTemplate>
+            </Setter>
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton > Path">
+            <Setter Property="Fill" Value="#FF000000" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton:pointerover > Path">
+            <Setter Property="Fill" Value="#888888" />
         </Style>
 
     </UserControl.Styles>
