--- a/src/v00v.Views/LogView/LogViewControl.xaml
+++ b/src/v00v.Views/LogView/LogViewControl.xaml
@@ -86,6 +86,38 @@
             <Setter Property="CornerRadius" Value="3" />
         </Style>
 
+        <Style Selector="ScrollBar /template/ Thumb#thumb">
+            <Setter Property="Background" Value="#888888"/>
+        </Style>
+        <Style Selector="ScrollBar:horizontal /template/ Thumb#thumb">
+            <Setter Property="MinWidth" Value="10" />
+            <Setter Property="Height" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar:vertical">
+            <Setter Property="Width" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar:vertical /template/ Thumb#thumb">
+            <Setter Property="MinHeight" Value="10" />
+            <Setter Property="Width" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton.repeat">
+            <Setter Property="Padding" Value="1" />
+            <Setter Property="Background" Value="#AAAAAA" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton.repeattrack">
+            <Setter Property="Template">
+                <ControlTemplate>
+                    <Border Background="#AAAAAA" />
+                </ControlTemplate>
+            </Setter>
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton > Path">
+            <Setter Property="Fill" Value="#FF000000" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton:pointerover > Path">
+            <Setter Property="Fill" Value="#888888" />
+        </Style>
+
     </UserControl.Styles>
 
 </UserControl>
