--- a/src/v00v.Views/Popup/PopupControl.xaml
+++ b/src/v00v.Views/Popup/PopupControl.xaml
@@ -72,7 +72,7 @@
                     Grid.ColumnSpan="3"
                     MinWidth="380"
                     MinHeight="20"
-                    Margin="12,10,12,12"
+                    Margin="8"
                     Items="{Binding Contexts, Mode=OneWay}"
                     SelectedItem="{Binding Context, Mode=OneWay}">
                     
@@ -112,7 +112,39 @@
              <Setter Property="Foreground" Value="#ffffff" /> 
              <Setter Property="FontSize" Value="13" /> 
         </Style>-->
-        
+
+        <Style Selector="ScrollBar /template/ Thumb#thumb">
+            <Setter Property="Background" Value="#888888"/>
+        </Style>
+        <Style Selector="ScrollBar:horizontal /template/ Thumb#thumb">
+            <Setter Property="MinWidth" Value="10" />
+            <Setter Property="Height" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar:vertical">
+            <Setter Property="Width" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar:vertical /template/ Thumb#thumb">
+            <Setter Property="MinHeight" Value="10" />
+            <Setter Property="Width" Value="10" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton.repeat">
+            <Setter Property="Padding" Value="1" />
+            <Setter Property="Background" Value="#AAAAAA" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton.repeattrack">
+            <Setter Property="Template">
+                <ControlTemplate>
+                    <Border Background="#AAAAAA" />
+                </ControlTemplate>
+            </Setter>
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton > Path">
+            <Setter Property="Fill" Value="#FF000000" />
+        </Style>
+        <Style Selector="ScrollBar /template/ RepeatButton:pointerover > Path">
+            <Setter Property="Fill" Value="#888888" />
+        </Style>
+
     </UserControl.Styles>
     
 </UserControl>
