--- a/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
+++ b/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
@@ -50,7 +50,7 @@
                 IsEnabled="{Binding SelectedTag.IsEditable, Mode=OneWay}" Margin="0,0,0,10"
                 IsVisible="True"
                 Watermark="Tag"
-                Text="{Binding SelectedTag.TagText, Mode=TwoWay}">
+                Text="{Binding SelectedTag.Text, Mode=TwoWay}">
             </TextBox>
             <TextBox
                 Width="185"
