--- a/src/v00v.MainApp/App.xaml
+++ b/src/v00v.MainApp/App.xaml
@@ -35,5 +35,12 @@
         <Style Selector="ScrollBar /template/ RepeatButton:pointerover > Path">
             <Setter Property="Fill" Value="#888888" />
         </Style>
+
+        <Style Selector="TabItem">
+            <Setter Property="FontSize" Value="11"/>
+            <Setter Property="Margin" Value="0,0,3,0"/>
+            <Setter Property="Padding" Value="3,2,3,2"/>
+        </Style>
+
     </Application.Styles>
 </Application>
