--- a/src/v00v.Views/Popup/Item/ItemPopupControl.xaml
+++ b/src/v00v.Views/Popup/Item/ItemPopupControl.xaml
@@ -41,6 +41,25 @@
                             <item:CommentControl />
                         </DataTemplate>
                     </ListBox.DataTemplates>
+                    <ListBox.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link">
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="Copy Text" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="text">
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="Copy Url" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="url" IsVisible="{Binding SelectedComment.CopyTextUrlEnabled, Mode=OneWay}">
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                        </ContextMenu>
+                    </ListBox.ContextMenu>
                 </ListBox>
                 <StackPanel Orientation="Horizontal" Height="25" Grid.Row="1" HorizontalAlignment="Right" IsEnabled="{Binding !Working, Mode=OneWay}">
                     <TextBlock Text="{Binding Comments.Count, Mode=OneWay}" VerticalAlignment="Center" Foreground="#92a3b3" Margin="10,0,380,0"/>
@@ -81,11 +100,8 @@
             <Setter Property="Background" Value="Transparent" />
         </Style>
 
-        <!--<Style Selector="ListBoxItem:selected Grid">
-            <Setter Property="Background" Value="#E6E6FA"/>
-        </Style>-->
         <Style Selector="ListBoxItem:selected Grid">
-            <Setter Property="Background" Value="red"/>
+            <Setter Property="Background" Value="#E6E6FA"/>
         </Style>
 
     </UserControl.Styles>
